--- a/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
+++ b/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
@@ -96,8 +96,8 @@
         <div class="col-sm-1">
         </div>
         <div class="col-sm-10">
-            <div class="col-md-4">
-                <h3>Eyemaxx Store Optical Studio</h3>
+            <div class="col-md-6">
+                <h3>Eyemaxx Optical Studio</h3>
                 <p>Address: 237 Elgin St Ottawa, ON K2P 1L6
                 </p>
                 <p>Email: staff@eyemaxx.ca</p>
