--- a/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
+++ b/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
@@ -96,7 +96,7 @@
         <div class="col-sm-4">
 
         </div>
-        <div class="col-sm-4 text-left">
+        <div class="col-sm-4 text-center">
 
             <h3>Eyemaxx Optical Studio</h3>
             <p>Address: 237 Elgin St Ottawa, ON K2P 1L6
