--- a/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
+++ b/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
@@ -101,7 +101,9 @@
             <h3>Eyemaxx Optical Studio</h3>
             <p>Address: 237 Elgin St Ottawa, ON K2P 1L6
             </p>
-            <p>Email: staff@eyemaxx.ca</p>
+            <a href="mailto:staff@eyemaxx.ca" target="_blank">
+                <p>Email: staff@eyemaxx.ca</p>
+            </a>
             <p>Phone: <a href="tel:613-216-6076">613.216.6076</a></p>
             <a target="_blank" class="btn btn-next btn-fill btn-danger btn-wd"
                 href="https://www.google.com/maps/place/Eyemaxx+Optical+Studio/@45.4187597,-75.6931724,17z/data=!3m2!4b1!5s0x4cce05a97c9f1ddf:0xe0b6f9110f255594!4m5!3m4!1s0x4cce05a9635628f5:0x126623ec6dff4430!8m2!3d45.4187597!4d-75.6909837">Get
