--- a/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
+++ b/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h4 class="info-text">COVID-19 Pre-screening</h4>
-            <h5 class="info-text"
+            <h5 class="info-text" style="color: red;"
                 *ngIf="( f.firstOption.errors) ||(f.secondOption.errors) || (f.thirdOption.errors) || (f.fourthOption.errors)">
                 Please check all the boxes to continue</h5>
         </div>
