--- a/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
+++ b/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
@@ -64,10 +64,9 @@
                 </div>
                 <div class="col-sm-12 ">
                     <mat-checkbox class="example-margin" formControlName="fourthOption" [color]="'primary'">I am not
-                        experiencing symptoms
-                        such as: redness, itching, swelling, pain, discharge,
-                        blurred
-                        vision, vision loss, floaters, flashers</mat-checkbox>
+                        experiencing symptoms such as: redness, itching, swelling, pain, discharge, blurred vision,
+                        vision loss, floaters, flashers. If you are, please call to book your appointment by clicking on
+                        the number below.</mat-checkbox>
 
 
                     <!-- <div class="checkbox">
