--- a/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
+++ b/src/app/online-booking-module/components/covid-pre-screening/covid-pre-screening.component.html
@@ -38,7 +38,7 @@
                         or been in contact with
                         someone who has.</mat-checkbox>
 
-                    <!--                         
+                    <!--
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" name="covid2" formControlName="secondOption">
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col-sm-12 ">
                     <mat-checkbox class="example-margin" formControlName="fourthOption" [color]="'primary'">I am not
-                        experiencing symptoms such as: redness, itching, swelling, pain, discharge, blurred vision,
+                        experiencing urgent symptoms such as: redness, itching, swelling, pain, discharge, blurred vision,
                         vision loss, floaters, flashers. If you are, please call to book your appointment by clicking on
                         the number below.</mat-checkbox>
 
@@ -104,7 +104,7 @@
                 <p>Email: staff@eyemaxx.ca</p>
             </a>
             <p>Phone: <a href="tel:613-216-6076">613.216.6076</a></p>
-            <a target="_blank" class="btn btn-next btn-fill btn-danger btn-wd"
+            <a id="get_dire" target="_blank" class="btn btn-next btn-fill btn-danger btn-wd"
                 href="https://www.google.com/maps/place/Eyemaxx+Optical+Studio/@45.4187597,-75.6931724,17z/data=!3m2!4b1!5s0x4cce05a97c9f1ddf:0xe0b6f9110f255594!4m5!3m4!1s0x4cce05a9635628f5:0x126623ec6dff4430!8m2!3d45.4187597!4d-75.6909837">Get
                 Directions</a>
         </div>
